# ve-tos-cpp-sdk

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README-zh.md  README.md
example/: CMakeLists.txt  example.cc
example/bucket/: BucketSample.cc  BucketSample.h
example/directory/: DirectorySample.cc  DirectorySample.h
example/initclient/: InitClient.cc  InitClient.h
example/object/: CopyObjectSample.cc  CopyObjectSample.h  CoroutineSample.cc  DownloadObjectSample.cc  DownloadObjectSample.h  ListObjectSample.cc  ListObjectSample.h  MoveObjectSample.cc  MoveObjectSample.h  OthersObjectSample.cc  OthersObjectSample.h  UploadObjectSample.cc  UploadObjectSample.h
example/presignedurl/: PresignedUrlSample.cc  PresignedUrlSample.h
sdk/: CMakeLists.txt  Demo.cc
sdk/include/: ClientConfig.h  Config.h  Outcome.h  RequestBuilder.h  RequestOptionBuilder.h  SchemeHostParameter.h  TosClient.h  TosClientV2.h  TosError.h  TosRequest.h  TosResponse.h  Type.h
sdk/include/auth/: Credential.h  Credentials.h  EcsCredentials.h  EcsToken.h  EnvCredentials.h  FederationCredentials.h  FederationToken.h  FederationTokenProvider.h  SignKeyInfo.h  Signer.h  StaticCredentials.h
sdk/include/common/: Common.h
sdk/include/model/: GenericInput.h  RequestInfo.h
sdk/include/model/acl/: Acl.h  CORSRule.h  DeleteBucketCORSInput.h  DeleteBucketCORSOutput.h  GetBucketAclInput.h  GetBucketAclOutput.h  GetBucketCORSInput.h  GetBucketCORSOutput.h  GetObjectAclOutput.h  GetObjectAclV2Input.h  GetObjectAclV2Output.h  Grant.h  GrantV2.h  Grantee.h  GranteeV2.h  ObjectAclGrant.h  ObjectAclRules.h  Owner.h  PolicySignatureCondition.h  PolicySignatureConditionInner.h  PolicyURLInner.h  PreSignedPolicyURLInput.h  PreSignedPolicyURLOutput.h  PreSignedPostSignatureInput.h  PreSignedPostSignatureOutput.h  PutBucketAclInput.h  PutBucketAclOutput.h  PutBucketCORSInput.h  PutBucketCORSOutput.h  PutObjectAclInput.h  PutObjectAclOutput.h  PutObjectAclV2Input.h  PutObjectAclV2Output.h
sdk/include/model/bucket/: AbortInCompleteMultipartUpload.h  AccessLogConfiguration.h  CORSRule.h  CloudFunctionConfiguration.h  Condition.h  CreateBucketInput.h  CreateBucketOutput.h  CreateBucketV2Input.h  CreateBucketV2Output.h  CustomDomainRule.h  DeleteBucketCORSInput.h  DeleteBucketCORSOutput.h  DeleteBucketCustomDomainInput.h  DeleteBucketCustomDomainOutput.h  DeleteBucketInput.h  DeleteBucketLifecycleInput.h  DeleteBucketLifecycleOutput.h  DeleteBucketMirrorBackInput.h  DeleteBucketMirrorBackOutput.h  DeleteBucketOutput.h  DeleteBucketPolicyInput.h  DeleteBucketPolicyOutput.h  DeleteBucketRealTimeLogInput.h  DeleteBucketRealTimeLogOutput.h  DeleteBucketRenameInput.h  DeleteBucketRenameOutput.h  DeleteBucketReplicationInput.h  DeleteBucketReplicationOutput.h  DeleteBucketWebsiteInput.h  DeleteBucketWebsiteOutput.h  Destination.h  ErrorDocument.h  Expiration.h  Filter.h  FilterKey.h  FilterRule.h  GetBucketCORSInput.h  GetBucketCORSOutput.h  GetBucketLifecycleInput.h  GetBucketLifecycleOutput.h  (+74 more)
sdk/include/model/control/: DeleteQosPolicyInput.h  DeleteQosPolicyOutput.h  GetQosPolicyInput.h  GetQosPolicyOutput.h  PutQosPolicyInput.h  PutQosPolicyOutput.h
sdk/include/model/object/: AbortMultipartUploadInput.h  AbortMultipartUploadOutput.h  AppendObjectOutput.h  AppendObjectV2Input.h  AppendObjectV2Output.h  CompleteMultipartUploadInput.h  CompleteMultipartUploadOutput.h  CompleteMultipartUploadV2Input.h  CompleteMultipartUploadV2Output.h  ContentLengthRange.h  CopyObjectInner.h  CopyObjectOutput.h  CopyObjectV2Input.h  CopyObjectV2Output.h  CreateMultipartUploadInput.h  CreateMultipartUploadOutput.h  DeleteError.h  DeleteMultiObjectsInput.h  DeleteMultiObjectsOutput.h  DeleteObjectInput.h  DeleteObjectOutput.h  DeleteObjectTaggingInput.h  Deleted.h  (+114 more)
sdk/include/transport/: Transport.h  TransportConfig.h
sdk/include/utils/: BaseUtils.h  crc64.h
sdk/src/: RequestBuilder.cc  TosClient.cc  TosClientImpl.cc  TosClientImpl.h  TosClientV2.cc  TosError.cc  TosRequest.cc  TosResponse.cc
sdk/src/auth/: EcsCredentials.cc  FederationCredentials.cc  SignV4.cc  SignV4.h  Signer.cc
sdk/src/transport/: DefaultTransport.cc  DefaultTransport.h  SimpleTransport.cc  SimpleTransport.h  Transport.cc  TransportConfig.cc
sdk/src/utils/: BaseUtils.cc  LogUtils.h  MimeType.h  crc64.cc
test/: CMakeLists.txt
test/src/: Program.cc  SignV4Test.cc  TestConfig.h  TosRequestTest.cc  Utils.cc  Utils.h
test/src/Bucket/: BucketACLTest.cc  BucketBasicOperationTest.cc  BucketCORSTest.cc  BucketCreateHeadClientV1Test.cc  BucketCreateHeadTest.cc  BucketCustomDomainTest.cc  BucketDeleteTest.cc  BucketLifecycleTest.cc  BucketListTest.cc  BucketLocationTest.cc  BucketMirrorBackTest.cc  BucketNotificationTest.cc  BucketPolicyTest.cc  BucketRealTimeLogTest.cc  BucketRenameTest.cc  BucketReplicationTest.cc  BucketStorageClassTest.cc  BucketVersioningTest.cc  BucketWebsiteTest.cc
test/src/Object/: FetchObjectTest.cc  ObjectACLClientV1Test.cc  ObjectACLTest.cc  ObjectAppendGetClientV1Test.cc  ObjectAppendGetTest.cc  ObjectCopyClientV1Test.cc  ObjectCopyTest.cc  ObjectCreateAndListMultipartUploadClientV1Test.cc  ObjectCreateAndListMultipartUploadTest.cc  ObjectDeleteHNSTest.cc  ObjectListAndListVersionClientV1Test.cc  ObjectListAndListVersionTest.cc  ObjectListType2Test.cc  ObjectMetaDataClientV1Test.cc  ObjectMetaDataTest.cc  ObjectNameTest.cc  ObjectPutGetClientV1Test.cc  ObjectPutGetTest.cc  ObjectRenameTest.cc  ObjectStreamGetTest.cc  ObjectTaggingTest.cc  ObjectUploadPartAndCompleteClientV1Test.cc  ObjectUploadPartAndCompleteTest.cc  ObjectUploadPartCopyClientV1Test.cc  ObjectUploadPartCopyTest.cc  RestoreObjectTest.cc
test/src/Others/: CallBackTest.cc  DownLoadFileTest.cc  InitClientTest.cc  Md5Crc64DataVerifyTest.cc  PreSignedPostSignatureTest.cc  QosPolicyTest.cc  ResumableCopyObjectTest.cc  RetryTest.cc  SignV4Test.cc  SupportProgressTest.cc  TosRequestTest.cc  UploadFileTest.cc
test/src/ValueAdded/: DownLoadFileTest.cc  SuffixIdentificationByFileNameTest.cc  SupportProgressTest.cc  UploadFileTest.cc
test/testdata/: PutObjectTest.txt
(+95 files in other folders)
